# lamp

./: .gitignore  Cargo.toml  Makefile
frontend/: Makefile
frontend/output/: index.html
frontend/src/: Main.elm
src/: led.rs  main.rs  web.rs
