[package]
name = "ledstrips"
version = "0.1.0"
authors = ["TheZoq2 <frans.skarman@gmail.com>"]

[dependencies]
iron = "0.5.*"
#router = "*"
mount = "*"
staticfile = "*"
router = "*"
serde = "1.0"
serde_derive = "1.0.*"
serde_json = "1.0.*"

[dependencies.ws281x]
#ws281x = "0.1.0"
path = "../rust-ws281x"
